# lv_port_win_codeblocks

./: .gitignore  CMakeLists.txt  main.c  winmake.mk
my_examples/: CMakeLists.txt  page_load_ctrol.c  page_load_ctrol.h  ui.c
my_examples/common/: ui_helpers.c
my_examples/fonts/: ui_font_FontHei24.c  ui_font_FontHei32.c  ui_font_FontHei96.c  ui_font_Number.c
